force-app/main/default/objects/Bank_Account__c/fields/Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship__c</fullName>
    <label>Account Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own account</fullName>
            </value>
            <value>
                <fullName>3rd party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>