force-app/main/default/objects/Bank_Account__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <formula>Account__r.Client_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Code</label>
    <type>Text</type>
</CustomField>